Add lib/tasks to exclude

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -112,6 +112,7 @@ Metrics/MethodLength:
   Exclude:
     - spec/**/*
     - test/**/*
+    - lib/tasks/**/*
     - automations/**/*
     - lib/tasks/global_data.rake
 
