Update trailing comma style
A trailing comma makes diffs simpler to read and makes copy/paste
easier. The Ruby style guide says this is 'not preferred' but gives no
reasoning why.

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -102,6 +102,12 @@ Style/FrozenStringLiteralComment:
     - db/migrate/*
     - automations/*/*.rb
 
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: comma
+
 Metrics/ModuleLength:
   Enabled: false
   Exclude:
