--- a/rubocop.yml
+++ b/rubocop.yml
@@ -33,10 +33,8 @@ Rails/TimeZone:
   Exclude:
     - gems/**/*
 
-# Enable and fix this when we are on Rails 5
-# Fix with: rubocop --only Rails/HttpPositionalArguments --auto-correct
 Rails/HttpPositionalArguments:
-  Enabled: false
+  Enabled: true
 
 Rails/SkipsModelValidations:
   Enabled: false
