--- a/rubocop.yml
+++ b/rubocop.yml
@@ -148,6 +148,7 @@ RSpec/DescribeClass:
     - spec/requests/**/*_spec.rb
     - spec/views/**/*_spec.rb
     - spec/features/**/*_spec.rb
+    - spec/system/**/*_spec.rb
     - gems/**/*/spec/views/**/*_spec.rb
 
 RSpec/MultipleExpectations:
@@ -161,6 +162,7 @@ RSpec/ExampleLength:
   Exclude:
     - spec/acceptance/**/*_spec.rb
     - spec/features/**/*_spec.rb
+    - spec/system/**/*_spec.rb
 
 RSpec/NestedGroups:
   Max: 5
