Also ignore vendor directory in gems

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -17,6 +17,7 @@ AllCops:
     - gems/**/*/db/schema.rb
     - extras/importer/**/*
     - vendor/**/*
+    - gems/**/vendor/**/*
     - public/**/*
     - tmp/**/*
     - node_modules/**/*
